# python-cheat-sheet

./: .gitignore  Gemfile  README.md  _config.yml  index.md  pyproject.toml  python_cheat_sheet_interactive.ipynb
.github/workflows/: pages.yml
